--- a/app/views/daycare/index.html.slim
+++ b/app/views/daycare/index.html.slim
@@ -8,6 +8,7 @@
           - @daycares.each do |daycare|
             = render "daycare", daycare: daycare, details: false
 
+    - unless @daycares.is_a?(Array)
       .ui.basic.segment
         = paginate @daycares
     .column
