--- a/app/views/daycare/grade.html.slim
+++ b/app/views/daycare/grade.html.slim
@@ -7,9 +7,9 @@
         .ui.large.divided.list.results-list
           - @daycares.each do |daycare|
             = render "daycare", daycare: daycare, details: false
-    - unless @daycares.is_a?(Array)
-      .ui.basic.segment
-        = paginate @daycares
+      - if !@daycares.is_a?(Array)
+        .ui.basic.segment
+          = paginate @daycares
     .column
       .map-wrapper
         #map
