--- a/app/views/kaminari/_first_page.html.slim
+++ b/app/views/kaminari/_first_page.html.slim
@@ -1,2 +1,4 @@
-a.item href=url title=t('views.pagination.first')
-  i.fast.backward.icon
+li.page-item
+  a.page-link[href=url aria-label=t('views.pagination.first') title=t('views.pagination.first')]
+    span.fa.fa-angle-double-left[aria-hidden="true"]
+    span.sr-only=t('views.pagination.first')
