--- a/app/views/kaminari/_last_page.html.slim
+++ b/app/views/kaminari/_last_page.html.slim
@@ -1,2 +1,4 @@
-a.item href=url title=t('views.pagination.last')
-  i.fast.forward.icon
+li.page-item
+  a.page-link[href=url aria-label=t('views.pagination.last') title=t('views.pagination.last')]
+    span.fa.fa-angle-double-right[aria-hidden="true"]
+    span.sr-only=t('views.pagination.last')
