--- a/app/views/kaminari/_prev_page.html.slim
+++ b/app/views/kaminari/_prev_page.html.slim
@@ -1,2 +1,4 @@
-a.item href=url title=t('views.pagination.previous')
-  i.left.arrow.icon
+li.page-item
+  a.page-link[href=url aria-label=t('views.pagination.previous') title=t('views.pagination.previous')]
+    span.fa.fa-angle-left[aria-hidden="true"]
+    span.sr-only=t('views.pagination.previous')
