--- a/app/views/daycare/index.html.slim
+++ b/app/views/daycare/index.html.slim
@@ -1,15 +1,14 @@
 = javascript_include_tag "daycares"
 
-.ui.stackable.grid#results
-  .two.column.row
-    .column
-      .ui.basic.segment
-        .ui.large.divided.list.results-list
-          - @daycares.each do |daycare|
-            = render "daycare", daycare: daycare, details: false
-        - if !@daycares.is_a?(Array)
-          .ui.basic.segment
+#results
+  .container-fluid
+    .row
+      .col-md-6
+          .results-list
+            - @daycares.each do |daycare|
+              = render "daycare", daycare: daycare, details: false
+          - if !@daycares.is_a?(Array)
             = paginate @daycares
-    .column
-      .map-wrapper
-        #map
+      .col-md-6
+        .map-wrapper
+          #map
