--- a/app/views/daycare/show.html.slim
+++ b/app/views/daycare/show.html.slim
@@ -1,11 +1,9 @@
 = javascript_include_tag "daycare"
 
-.ui.stackable.grid#results
-  .two.column.row
-    .column
-      .ui.basic.segment
-        .ui.large.divided.list.results-list
+#results
+  .container-fluid
+    .row
+      .col-md-6
+        .results-list
           = render "daycare", daycare: @daycare, details: true
-    .column
-      .map-wrapper
-        #map
+#map
