--- a/app/views/daycare/_daycare.html.slim
+++ b/app/views/daycare/_daycare.html.slim
@@ -5,6 +5,7 @@
   data-lon=daycare.lon
   data-center_name=daycare.center_name
   data-grade=daycare.grade
+  data-permalink="/daycare/#{daycare.permalink}"
 ]
   .media-body
     .media-left.image
