--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -13,7 +13,7 @@ html lang="en"
     = javascript_include_tag 'application'
   body
     #masthead
-      nav.navbar.navbar-fixed-top.navbar-full.bg-primary
+      nav.navbar.navbar-full.bg-primary
         a.navbar-brand[href="/"] KARL<span>AND</span>KEKE
 
         form.form-inline[method="get"]
