better popup message

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -149,7 +149,7 @@ body {
   border-bottom: 1px solid $gray-lighter;
 
   &.hovering {
-    background: $gray-lighter;
+    background: #fcfbfd;
   }
 
   &:last-of-type {
