Map view! Here we go

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -90,6 +90,10 @@ body {
   @include media-breakpoint-up(sm) {
     display: block;
   }
+
+  &.full_width {
+    width: 100%;
+  }
 }
 
 .grades-filter {
