--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -16,7 +16,7 @@ html lang="en"
       nav.navbar.navbar-full.bg-primary
         a.navbar-brand[href="/"] KARL<span>AND</span>KEKE
 
-        form.form-inline[method="get"]
+        form.form-inline[method="get", action="/"]
           .form-group.search
             label.form-control-label.sr-only[for="search"]
               | Search by Daycare or Location
