updating scraper: past inspections storing more similarly to last inspection. Only creating big file + first 8 for testing, rather than each. Started messing with template

--- a/app/views/daycare/_daycare.html.slim
+++ b/app/views/daycare/_daycare.html.slim
@@ -60,4 +60,9 @@
             .desc= "#{daycare.certified_to_administer_medication ? 'Is' : 'Not'} certified to administer medication"
           li.list-group-item
             strong Inspections
-            .desc= "#{daycare.has_inspections ? 'Has' : 'No'} regular inspections"
+            - if daycare.has_inspections
+              ul
+              - @daycare.past_inspections.each do |inspection|
+                li.desc inspection.date | inspection.result
+            - else
+                .desc No Regular Inspections
