--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -41,10 +41,8 @@ html lang="en"
                   span.grade.grade-b B
                 a.dropdown-item[href="/daycare/grade/C?q=#{@query}&nearby=#{@nearby}" data-filter='c']
                   span.grade.grade-c C
-                a.dropdown-item[href="/daycare/grade/D?q=#{@query}&nearby=#{@nearby}" data-filter='d']
-                  span.grade.grade-d D
-                a.dropdown-item[href="/daycare/grade/E?q=#{@query}&nearby=#{@nearby}" data-filter='e']
-                  span.grade.grade-e E
+                a.dropdown-item[href="/daycare/grade/E?q=#{@query}&nearby=#{@nearby}" data-filter='f']
+                  span.grade.grade-e F
     #content
       = yield
 
