colored dots for markers in the /map view

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -123,7 +123,9 @@ body {
   font-weight: 300;
   font-size: 16px;
   text-transform: uppercase;
+}
 
+.grade, .my-icon {
   &-a {
     background-color: $blue;
   }
@@ -147,6 +149,16 @@ body {
   &-f {
     background-color: $red;
   }
+}
+
+.my-icon {
+  border-radius: 100%;
+  width: 10px;
+  height: 10px;
+  text-align: center;
+  line-height: 20px;
+  color: white;
+  border: 1px solid white;
 }
 
 .daycare {
