getting imgix working

--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -1,4 +1,4 @@
-.jumbotron.text-sm-center
+.jumbotron.text-sm-center.imgix-fluid.imgix-fluid-bg[data-src="#{ix_image_url('map_bg-2.png')}"]
   h1.kk-logo
     | KARL<span>AND</span>KEKE
     small.text-muted
